--- a/package.json
+++ b/package.json
@@ -20,13 +20,29 @@
     "@angular/router": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "@dimforge/rapier3d": "^0.11.2",
+    "@ngbmodule/material-carousel": "^0.7.2",
+    "@tinymce/tinymce-angular": "^6.0.0",
+    "@types/estree": "^1.0.0",
+    "bootstrap": "^3.4.1",
+    "esbuild-plugin-glsl": "^1.1.0",
+    "glslify-loader": "^2.0.0",
+    "jest-editor-support": "*",
+    "lil-gui": "^0.18.1",
+    "raw-loader": "^4.0.2",
+    "three": "^0.152.2",
+    "three-mesh-bvh": "^0.6.3"
+
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.1",
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/three": "^0.152.0",
+    "cannon-es": "^0.20.0",
+    "gsap": "^3.5.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
